Fix bug Too big border radius for hover container in multi- and single-select answers. #6

--- a/css/styles.css
+++ b/css/styles.css
@@ -476,7 +476,7 @@ body {
 
     .question-answer:hover {
         background-color: rgba(247,247,247, 0.75);
-        border-radius: 10px;
+        border-radius: 4px;
     }
 
     .question-answer > * {
@@ -1087,7 +1087,7 @@ body {
 
     .question-answer-item:hover {
         background-color: rgba(247,247,247, 0.75);
-        border-radius: 10px;
+        border-radius: 4px;
     }
 
     .question-answer-item + .question-answer-item {
